test/expected/explain_a_nua_f.out
explain [[no_unique_address]] void f()
                                   ^
36: error: function can not be "no_unique_address"
